Try to fix overflow/scrollbar issue

--- a/src/components/Create/index.scss
+++ b/src/components/Create/index.scss
@@ -34,6 +34,7 @@
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   resize: none;
+  overflow: hidden;
   }
 
   &--paragraph {
@@ -45,6 +46,7 @@
   margin-top: 0.5rem;
   margin-bottom: 1rem;
   resize: none;
+  overflow: hidden;
   }
 
   &--radio {
